--- a/public/style/style.css
+++ b/public/style/style.css
@@ -42,7 +42,7 @@ html {
     align-items: center;
     top: 50%;
     left: 50%;
-    box-shadow: 0 0 5px #f413038b, 0 0 25px #f413038b, 0 0 50px #f413038b, 0 0 100px #f413038b;
+    box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #03e9f4;
     pointer-events: none;
 }
 
